Anonymous | Login | 2021-01-23 11:56 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030922 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-08-27 08:19 | 2020-12-02 17:12 | ||||
Reporter | nds | ||||||||
Assigned To | mzernova | ||||||||
Priority | normal | Severity | major | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point | ||||||||
Description | Setting local transformation has no effect on OpenGl_Text object if flag HasOwnAnchorPoint() is equal to Standard_False. | ||||||||
Steps To Reproduce | bugs/vis/bug30922 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs/vis/bug30922 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0086457) git (administrator) 2019-08-27 08:32 |
Branch CR30922 has been created by nds. SHA-1: 95a4927b5b2b9310de6ebe36f0fe6523cebe52c6 Detailed log of new commits: Author: nds Date: Tue Aug 27 08:26:23 2019 +0300 0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point (cherry picked from commit d149bbcbaf7d237425b574a1977acb07db299bea) |
(0087555) git (administrator) 2019-09-26 19:19 |
Branch CR30922_1 has been created by nds. SHA-1: f414985732fb8084363d543e65fc4d7232e22488 Detailed log of new commits: Author: nds Date: Tue Aug 27 08:26:23 2019 +0300 0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point (cherry picked from commit d149bbcbaf7d237425b574a1977acb07db299bea) (cherry picked from commit 95a4927b5b2b9310de6ebe36f0fe6523cebe52c6) |
(0087998) git (administrator) 2019-10-10 08:50 |
Branch CR30922_2 has been created by nds. SHA-1: 05ac0c7d75356573c725745bc19fab512a4bdad6 Detailed log of new commits: Author: nds Date: Tue Aug 27 08:26:23 2019 +0300 0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point (cherry picked from commit d149bbcbaf7d237425b574a1977acb07db299bea) (cherry picked from commit 95a4927b5b2b9310de6ebe36f0fe6523cebe52c6) (cherry picked from commit f414985732fb8084363d543e65fc4d7232e22488) |
(0092556) git (administrator) 2020-06-16 14:28 |
Branch CR30922_3 has been created by mzernova. SHA-1: 9a31c0106462f21cf7dfa631f39e3b8886969f51 Detailed log of new commits: Author: mzernova Date: Tue Jun 16 14:24:26 2020 +0300 0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point bugs/vis/bug30922: test case added |
(0092557) mzernova (developer) 2020-06-16 14:33 |
this problem was solved by a patch CR31193 |
(0092560) nds (developer) 2020-06-17 09:24 |
Dear Kirill, the case is what is expected. could you please have a look. Thank you a lot. |
(0092561) kgv (developer) 2020-06-17 09:29 |
Dear Marina, as usual - could you please attach a pair of screenshots for the bug before and after the fix. |
(0092563) mzernova (developer) 2020-06-17 11:06 |
The patch CR30922 is ready to review |
(0092564) kgv (developer) 2020-06-17 11:10 |
Please raise the patch in OCCT branch CR30922_3. |
(0092596) bugmaster (administrator) 2020-06-20 13:33 |
Combination - OCCT branch : IR-2020-06-19 master SHA - ef779ae0da0ded44c5045762768fe5f5eaff6b04 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-06-19 SHA - 9e1feabf4ca514e1647ce6acf381182c6ac85c9c was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17159.860000000117 / 17161.410000000207 [-0.01%] Products Total CPU difference: 11197.400000000112 / 11196.290000000083 [+0.01%] Windows-64-VC14: OCCT Total CPU difference: 18670.90625 / 18756.21875 [-0.45%] Products Total CPU difference: 13012.71875 / 13044.46875 [-0.24%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0092605) git (administrator) 2020-06-20 13:42 |
Branch CR30922_3 has been deleted by inv. SHA-1: 9a31c0106462f21cf7dfa631f39e3b8886969f51 |
(0092616) git (administrator) 2020-06-20 13:42 |
Branch CR30922_2 has been deleted by inv. SHA-1: 05ac0c7d75356573c725745bc19fab512a4bdad6 |
(0092617) git (administrator) 2020-06-20 13:42 |
Branch CR30922_1 has been deleted by inv. SHA-1: f414985732fb8084363d543e65fc4d7232e22488 |
(0092618) git (administrator) 2020-06-20 13:42 |
Branch CR30922 has been deleted by inv. SHA-1: 95a4927b5b2b9310de6ebe36f0fe6523cebe52c6 |
![]() |
|||
occt: master 9a31c010
Timestamp: 2020-06-16 11:24:26 Author: mzernova [ Details ] [ Diff ] |
0030922: Visualization - OpenGl_Text wrong local transformation if text has not own attach point bugs/vis/bug30922: test case added |
||
add - tests/bugs/vis/bug30922 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-08-27 08:19 | nds | New Issue | |
2019-08-27 08:19 | nds | Assigned To | => kgv |
2019-08-27 08:32 | git | Note Added: 0086457 | |
2019-08-27 08:36 | nds | Assigned To | kgv => nds |
2019-09-19 10:33 | nds | Target Version | 7.4.0 => 7.5.0 |
2019-09-26 19:19 | git | Note Added: 0087555 | |
2019-10-10 08:50 | git | Note Added: 0087998 | |
2019-11-25 11:39 | nds | Relationship added | related to 0031193 |
2020-06-01 11:31 | mzernova | Assigned To | nds => mzernova |
2020-06-16 14:28 | git | Note Added: 0092556 | |
2020-06-16 14:33 | mzernova | Note Added: 0092557 | |
2020-06-16 14:33 | mzernova | Assigned To | mzernova => nds |
2020-06-16 14:33 | mzernova | Status | new => resolved |
2020-06-16 14:33 | mzernova | Steps to Reproduce Updated | View Revisions |
2020-06-17 09:24 | nds | Note Added: 0092560 | |
2020-06-17 09:24 | nds | Assigned To | nds => kgv |
2020-06-17 09:29 | kgv | Note Added: 0092561 | |
2020-06-17 09:30 | kgv | Assigned To | kgv => mzernova |
2020-06-17 09:30 | kgv | Status | resolved => feedback |
2020-06-17 09:30 | kgv | Product Version | => 7.4.0 |
2020-06-17 11:04 | mzernova | File Added: before.png | |
2020-06-17 11:05 | mzernova | File Added: after.png | |
2020-06-17 11:06 | mzernova | Note Added: 0092563 | |
2020-06-17 11:06 | mzernova | Assigned To | mzernova => kgv |
2020-06-17 11:06 | mzernova | Status | feedback => resolved |
2020-06-17 11:09 | kgv | Assigned To | kgv => bugmaster |
2020-06-17 11:09 | kgv | Status | resolved => reviewed |
2020-06-17 11:10 | kgv | Note Added: 0092564 | |
2020-06-20 13:31 | bugmaster | Test case number | => bugs/vis/bug30922 |
2020-06-20 13:33 | bugmaster | Note Added: 0092596 | |
2020-06-20 13:33 | bugmaster | Status | reviewed => tested |
2020-06-20 13:36 | mzernova | Changeset attached | => occt master 9a31c010 |
2020-06-20 13:36 | mzernova | Assigned To | bugmaster => mzernova |
2020-06-20 13:36 | mzernova | Status | tested => verified |
2020-06-20 13:36 | mzernova | Resolution | open => fixed |
2020-06-20 13:42 | git | Note Added: 0092605 | |
2020-06-20 13:42 | git | Note Added: 0092616 | |
2020-06-20 13:42 | git | Note Added: 0092617 | |
2020-06-20 13:42 | git | Note Added: 0092618 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |